--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,8 @@
+application.args=/win_d/hubok.txt /home/ktorpi
 #Thu Apr 22 09:23:16 CEST 2010
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=/home/ktorpi/.netbeans/6.7/build.properties
