--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -30,3 +30,13 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
+konyvtarJobb.text=konyvtar_jobb
+konyvtarBal.text=konyvtar_bal
+listaBal.columnModel.title3=Jogosults\u00E1gok
+listaBal.columnModel.title2=Utolj\u00E1ra m\u00F3dos\u00EDtva
+listaBal.columnModel.title1=M\u00E9ret
+listaBal.columnModel.title0=N\u00E9v
+listaJobb.columnModel.title3=Jogosults\u00E1gok
+listaJobb.columnModel.title2=Utolj\u00E1ra m\u00F3dos\u00EDtva
+listaJobb.columnModel.title1=M\u00E9ret
+listaJobb.columnModel.title0=N\u00E9v
