--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,5 +5,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-jaxbwiz.endorsed.dirs=P:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Users\\Timi\\.netbeans\\6.8\\build.properties
+jaxbwiz.endorsed.dirs=/home/ktorpi/netbeans-6.8/ide12/modules/ext/jaxb/api
+user.properties.file=/home/ktorpi/.netbeans/6.8/build.properties
