--- a/nbproject/private/configs/Main_config.properties
+++ b/nbproject/private/configs/Main_config.properties
@@ -1,1 +1,1 @@
-application.args=/media/KINGSTON/Nyilv\u00e1nos /media/KINGSTON
+application.args=/home/ktorpi/tankford.sh /media/KINGSTON/Nyilv\u00e1nos/1 /media/KINGSTON
