Rejtett fájlok szűrése megvalositva.

--- a/nbproject/private/configs/Main_config.properties
+++ b/nbproject/private/configs/Main_config.properties
@@ -1,1 +1,1 @@
-application.args=/home/ktorpi/tankford.sh /media/KINGSTON/Nyilv\u00e1nos/1 /media/KINGSTON
+application.args=/home/ktorpi /media/KINGSTON/Nyilv\u00e1nos/1 /media/KINGSTON
