Végetelen rekurzió megállítása a copyEntryben, méret formázása a bejegyzések listázásánál.

--- a/nbproject/private/configs/Main_config.properties
+++ b/nbproject/private/configs/Main_config.properties
@@ -1,1 +1,1 @@
-application.args=/home/ktorpi /media/KINGSTON/Nyilv\u00e1nos/1 /media/KINGSTON
+application.args=/win_d /media/KINGSTON/Nyilv\u00e1nos/1 /media/KINGSTON
