átnevezés/áthelyezés megvan

--- a/nbproject/private/configs/Main_config.properties
+++ b/nbproject/private/configs/Main_config.properties
@@ -1,1 +1,1 @@
-application.args=/win_d /media/KINGSTON/Nyilv\u00e1nos/1 /media/KINGSTON
+application.args=/media/KINGSTON/halmaz1 /home/ktorpi/halmaz
