gombok es menupontok

--- a/src/tgcommander/resources/TGcommanderApp.properties
+++ b/src/tgcommander/resources/TGcommanderApp.properties
@@ -1,7 +1,7 @@
 # Application global resources
 
 Application.name = TGcommander
-Application.title = Basic Application Example
+Application.title = TGcommander
 Application.version = 1.0
 Application.vendor = Sun Microsystems Inc.
 Application.homepage = http\://appframework.dev.java.net/
@@ -9,3 +9,6 @@ Application.description = A simple Java desktop application based on Swing Appli
 Application.vendorId = Sun
 Application.id = ${Application.name}
 Application.lookAndFeel = system
+quit.Action.accelerator=alt pressed F4
+quit.Action.shortDescription=
+quit.Action.text=Kil\u00E9p\u00E9s
