--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -1,14 +1,7 @@
-# Resources for the TGcommanderView class
-
-# top-level menus
-
-fileMenu.text = File
-helpMenu.text = Help
-
-# @Action resources
-
-showAboutBox.Action.text = &About...
-showAboutBox.Action.shortDescription = Show the application's information dialog
+fileMenu.text = F\u00E1jl
+helpMenu.text = S\u00FAg\u00F3
+showAboutBox.Action.text=A TGcommander n\u00E9vjegye
+showAboutBox.Action.shortDescription =
 
 # status bar resources
 
@@ -30,13 +23,53 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
-konyvtarJobb.text=konyvtar_jobb
-konyvtarBal.text=konyvtar_bal
+listaJobb.columnModel.title1=M\u00E9ret
+listaJobb.columnModel.title0=N\u00E9v
+listaJobb.columnModel.title3=Jogosults\u00E1gok
+listaJobb.columnModel.title2=Utolj\u00E1ra m\u00F3dos\u00EDtva
+masolasGomb.text=m\u00E1sol\u00E1s
+athelyezesGomb.text=\u00E1thelyez\u00E9s
+ujKonyvtarGomb.text=\u00FAj k\u00F6nyvt\u00E1r
+torlesGomb.text=t\u00F6rl\u00E9s
+masolas.Action.text=
+masolas.Action.accelerator=pressed F5
+masolas.Action.shortDescription=
+athelyezes.Action.shortDescription=
+athelyezes.Action.text=
+athelyezes.Action.accelerator=pressed F6
+ujKonyvtar.Action.accelerator=pressed F7
+ujKonyvtar.Action.shortDescription=
+ujKonyvtar.Action.text=
+torles.Action.shortDescription=
+torles.Action.text=
+torles.Action.accelerator=pressed F8
+listaBal.columnModel.title0=N\u00E9v
 listaBal.columnModel.title3=Jogosults\u00E1gok
 listaBal.columnModel.title2=Utolj\u00E1ra m\u00F3dos\u00EDtva
 listaBal.columnModel.title1=M\u00E9ret
-listaBal.columnModel.title0=N\u00E9v
-listaJobb.columnModel.title3=Jogosults\u00E1gok
-listaJobb.columnModel.title2=Utolj\u00E1ra m\u00F3dos\u00EDtva
-listaJobb.columnModel.title1=M\u00E9ret
-listaJobb.columnModel.title0=N\u00E9v
+exitMenuItem.text=Kil\u00E9p\u00E9s
+showAboutBox.Action.accelerator=ctrl pressed A
+szabadHelyBal.text=szabad_hely_bal
+szabadHelyJobb.text=szabad_hely_jobb
+jButton1.text=s\u00FAg\u00F3
+jButton2.text=n\u00E9vjegy
+jButton3.text=jButton3
+jButton4.text=jButton4
+gyokerkonyvtar.Action.shortDescription=Ugr\u00E1s a gy\u00F6k\u00E9rk\u00F6nyvt\u00E1rba
+gyokerkonyvtar.Action.text=/
+gyokerkonyvtar.Action.accelerator=ctrl pressed R
+szuloKonyvtar.Action.shortDescription=Ugr\u00E1s a sz\u00FCl\u0151k\u00F6nyvt\u00E1rba
+szuloKonyvtar.Action.text=..
+szuloKonyvtar.Action.accelerator=ctrl pressed P
+masolasMenuItem.text=F\u00E1jl m\u00E1sol\u00E1sa
+athelyezesMenuItem.text=F\u00E1jl \u00E1thelyez\u00E9se
+ujKonyvtarMenuItem.text=\u00DAj k\u00F6nyvt\u00E1r l\u00E9trehoz\u00E1sa
+torlesMenuItem.text=F\u00E1jl t\u00F6rl\u00E9se
+#NOI18N
+elvalaszto1.foreground=153, 153, 153
+aktualisKonyvtarBal.text=konyvtar_bal
+aktualisKonyvtarJobb.text=konyvtar_jobb
+sugo.Action.text=S\u00FAg\u00F3
+sugo.Action.accelerator=ctrl pressed S
+sugo.Action.shortDescription=
+jMenuItem1.text=jMenuItem1
