--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 jaxbwiz.endorsed.dirs=/home/ktorpi/netbeans-6.8/ide12/modules/ext/jaxb/api
-user.properties.file=/home/ktorpi/.netbeans/6.8/build.properties
+user.properties.file=/home/zealot/.netbeans/6.8/build.properties
