atalakitott felulet, aktualis konyvtar kiirasa

--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -23,11 +23,7 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
-masolasGomb.text=m\u00E1sol\u00E1s
-athelyezesGomb.text=\u00E1thelyez\u00E9s
-ujKonyvtarGomb.text=\u00FAj k\u00F6nyvt\u00E1r
-torlesGomb.text=t\u00F6rl\u00E9s
-masolas.Action.text=
+masolas.Action.text=F5 - M\u00E1sol\u00E1s
 masolas.Action.accelerator=pressed F5
 masolas.Action.shortDescription=
 athelyezes.Action.shortDescription=
@@ -41,10 +37,6 @@ torles.Action.text=
 torles.Action.accelerator=pressed F8
 exitMenuItem.text=Kil\u00E9p\u00E9s
 showAboutBox.Action.accelerator=ctrl pressed A
-szabadHelyBal.text=szabad_hely_bal
-szabadHelyJobb.text=szabad_hely_jobb
-jButton1.text=s\u00FAg\u00F3
-jButton2.text=n\u00E9vjegy
 jButton3.text=jButton3
 jButton4.text=jButton4
 gyokerkonyvtar.Action.shortDescription=Ugr\u00E1s a gy\u00F6k\u00E9rk\u00F6nyvt\u00E1rba
@@ -59,13 +51,16 @@ ujKonyvtarMenuItem.text=\u00DAj k\u00F6nyvt\u00E1r l\u00E9trehoz\u00E1sa
 torlesMenuItem.text=F\u00E1jl t\u00F6rl\u00E9se
 #NOI18N
 elvalaszto1.foreground=153, 153, 153
-aktualisKonyvtarBal.text=konyvtar_bal
-aktualisKonyvtarJobb.text=konyvtar_jobb
 sugo.Action.text=S\u00FAg\u00F3
 sugo.Action.accelerator=ctrl pressed S
 sugo.Action.shortDescription=
 jMenuItem1.text=jMenuItem1
-listaJobb.columnModel.title3=Jogosults\u00E1gok
-listaJobb.columnModel.title2=Utolj\u00E1ra m\u00F3dos\u00EDtva
-listaJobb.columnModel.title1=M\u00E9ret
-listaJobb.columnModel.title0=N\u00E9v
+torlesGomb.text=F8 - T\u00F6rl\u00E9s
+ujKonyvtarGomb.text=F7 - \u00DAj k\u00F6nyvt\u00E1r
+athelyezesGomb.text=F6 - \u00C1thelyez\u00E9s
+nezetMenu.text=N\u00E9zet
+rejtettFajlMenupont.text=Rejtett f\u00E1jlok megjelen\u00EDt\u00E9se
+kilepesGomb.text=Alt+F4 - Kil\u00E9p\u00E9s
+balKonyvtar.text=aktu\u00E1lis k\u00F6nyvt\u00E1r
+jobbKonyvtar.text=aktu\u00E1lis k\u00F6nyvt\u00E1r
+torlesGomb1.text=F5 - M\u00E1sol\u00E1s
