--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -35,9 +35,7 @@ ujKonyvtar.Action.text=
 torles.Action.shortDescription=
 torles.Action.text=
 torles.Action.accelerator=pressed F8
-exitMenuItem.text=Kil\u00E9p\u00E9s
 showAboutBox.Action.accelerator=ctrl pressed A
-jButton3.text=jButton3
 jButton4.text=jButton4
 gyokerkonyvtar.Action.shortDescription=Ugr\u00E1s a gy\u00F6k\u00E9rk\u00F6nyvt\u00E1rba
 gyokerkonyvtar.Action.text=/
@@ -45,22 +43,33 @@ gyokerkonyvtar.Action.accelerator=ctrl pressed R
 szuloKonyvtar.Action.shortDescription=Ugr\u00E1s a sz\u00FCl\u0151k\u00F6nyvt\u00E1rba
 szuloKonyvtar.Action.text=..
 szuloKonyvtar.Action.accelerator=ctrl pressed P
-masolasMenuItem.text=F\u00E1jl m\u00E1sol\u00E1sa
-athelyezesMenuItem.text=F\u00E1jl \u00E1thelyez\u00E9se
-ujKonyvtarMenuItem.text=\u00DAj k\u00F6nyvt\u00E1r l\u00E9trehoz\u00E1sa
-torlesMenuItem.text=F\u00E1jl t\u00F6rl\u00E9se
+masolasMenuItem.text=M\u00E1sol\u00E1s
+athelyezesMenuItem.text=\u00C1thelyez\u00E9s
+ujKonyvtarMenuItem.text=\u00DAj k\u00F6nyvt\u00E1r
+torlesMenuItem.text=T\u00F6rl\u00E9s
 #NOI18N
 elvalaszto1.foreground=153, 153, 153
 sugo.Action.text=S\u00FAg\u00F3
 sugo.Action.accelerator=ctrl pressed S
 sugo.Action.shortDescription=
-jMenuItem1.text=jMenuItem1
 torlesGomb.text=F8 - T\u00F6rl\u00E9s
 ujKonyvtarGomb.text=F7 - \u00DAj k\u00F6nyvt\u00E1r
 athelyezesGomb.text=F6 - \u00C1thelyez\u00E9s
 nezetMenu.text=N\u00E9zet
-rejtettFajlMenupont.text=Rejtett f\u00E1jlok megjelen\u00EDt\u00E9se
 kilepesGomb.text=Alt+F4 - Kil\u00E9p\u00E9s
 balKonyvtar.text=aktu\u00E1lis k\u00F6nyvt\u00E1r
-jobbKonyvtar.text=aktu\u00E1lis k\u00F6nyvt\u00E1r
 torlesGomb1.text=F5 - M\u00E1sol\u00E1s
+kilepesGomb1.text=F4 - \u00C1tnevez\u00E9s
+atnevezes.Action.text=
+atnevezes.Action.accelerator=pressed F4
+atnevezes.Action.shortDescription=
+rejtettFajlok.Action.text=
+rejtettFajlok.Action.shortDescription=
+jButton3.text=jButton3
+balGyokerGomb.text=/
+jButton1.text=jButton1
+jobbKonyvtar.text=aktu\u00E1lis k\u00F6nyvt\u00E1r
+balSzuloGomb.text=..
+atnevezesMenuItem.text=\u00C1tnevez\u00E9s
+kilepesMenuItem.text=Kil\u00E9p\u00E9s
+rejtettFajlMenuItem.text=Rejtett f\u00E1jlok megjelen\u00EDt\u00E9se
