--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -71,5 +71,7 @@ jButton1.text=jButton1
 jobbKonyvtar.text=aktu\u00E1lis k\u00F6nyvt\u00E1r
 balSzuloGomb.text=..
 atnevezesMenuItem.text=\u00C1tnevez\u00E9s
-kilepesMenuItem.text=Kil\u00E9p\u00E9s
-rejtettFajlMenuItem.text=Rejtett f\u00E1jlok megjelen\u00EDt\u00E9se
+rejtettFajlMenupont.text=Rejtett f\u00E1jlok megjelen\u00EDt\u00E9se
+exitMenuItem.text=Kil\u00E9p\u00E9s
+jLabel1.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
+jLabel2.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
