--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -33,7 +33,7 @@ ujKonyvtar.Action.accelerator=pressed F7
 ujKonyvtar.Action.shortDescription=
 ujKonyvtar.Action.text=
 torles.Action.shortDescription=
-torles.Action.text=
+torles.Action.text=F8 -T\u00F6rl\u00E9s
 torles.Action.accelerator=pressed F8
 showAboutBox.Action.accelerator=ctrl pressed A
 jButton4.text=jButton4
@@ -58,8 +58,6 @@ athelyezesGomb.text=F6 - \u00C1thelyez\u00E9s
 nezetMenu.text=N\u00E9zet
 kilepesGomb.text=Alt+F4 - Kil\u00E9p\u00E9s
 balKonyvtar.text=aktu\u00E1lis k\u00F6nyvt\u00E1r
-torlesGomb1.text=F5 - M\u00E1sol\u00E1s
-kilepesGomb1.text=F4 - \u00C1tnevez\u00E9s
 atnevezes.Action.text=
 atnevezes.Action.accelerator=pressed F4
 atnevezes.Action.shortDescription=
@@ -73,5 +71,7 @@ balSzuloGomb.text=..
 atnevezesMenuItem.text=\u00C1tnevez\u00E9s
 rejtettFajlMenupont.text=Rejtett f\u00E1jlok megjelen\u00EDt\u00E9se
 exitMenuItem.text=Kil\u00E9p\u00E9s
-jLabel1.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
-jLabel2.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
+atnevezesGomb.text=F4 - \u00C1tnevez\u00E9s
+masolasGomb.text=F5 - M\u00E1sol\u00E1s
+balFajlokSzama.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
+jobbFajlokSzama.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
