--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -75,3 +75,8 @@ rejtettFajlMenupont.text=Rejtett f\u00E1jlok megjelen\u00EDt\u00E9se
 exitMenuItem.text=Kil\u00E9p\u00E9s
 jLabel1.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
 jLabel2.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
+panelek.toolTipText=
+#NOI18N
+balLista.background=255, 255, 255
+#NOI18N
+jobbLista.background=255, 255, 255
