A GUI tökéletesítése, megy az F8, F6, meg mittudomén...

--- a/src/tgcommander/resources/TGcommanderView.properties
+++ b/src/tgcommander/resources/TGcommanderView.properties
@@ -75,3 +75,7 @@ atnevezesGomb.text=F4 - \u00C1tnevez\u00E9s
 masolasGomb.text=F5 - M\u00E1sol\u00E1s
 balFajlokSzama.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
 jobbFajlokSzama.text=f\u00E1jlok sz\u00E1ma, m\u00E9rete
+#NOI18N
+jobbLista.background=255, 255, 255
+#NOI18N
+balLista.background=255, 255, 255
