Áthelyezés átírása, bugok javitása, névjegy átírása, fejléckommentek.

--- a/src/tgcommander/resources/TGcommanderApp.properties
+++ b/src/tgcommander/resources/TGcommanderApp.properties
@@ -2,9 +2,9 @@
 
 Application.name = TGcommander
 Application.title = TGcommander
-Application.version = 1.0
+Application.version = <html> K\u00E9sz\u00EDtette:  B\u00E1n D\u00E9nes, B\u00EDr\u00F3 T\u00EDme, K\u00E1d\u00E1r Istv\u00E1n
 Application.vendor = Sun Microsystems Inc.
-Application.homepage = http\://appframework.dev.java.net/
+Application.homepage = http://github.com/ktorpi/TGcommander
 Application.description = A simple Java desktop application based on Swing Application Framework.
 Application.vendorId = Sun
 Application.id = ${Application.name}
