--- a/src/tgcommander/resources/TGcommanderAboutBox.properties
+++ b/src/tgcommander/resources/TGcommanderAboutBox.properties
@@ -1,14 +1,9 @@
-title = About: ${Application.title} ${Application.version} 
+title = About: TGcommander 1.0
 
 closeAboutBox.Action.text = &Close
 
-appDescLabel.text=<html>${Application.description}
+appDescLabel.text=<html>Total Commander szer\u0171 f\u00E1jlkezel\u0151
 
-versionLabel.text=Product Version\:
-
-vendorLabel.text=Vendor\:
-
-homepageLabel.text=Homepage\:
-
-#NOI18N
-imageLabel.icon=about.png
+homepageLabel.text=Weboldal
+homepageLabel1.text=K\u00E9sz\u00EDtette
+appHomepageLabel1.text=B\u00E1n D\u00E9nes, B\u00EDr\u00F3 T\u00EDme, K\u00E1d\u00E1r Istv\u00E1n
