utolsó csiszolások, javadoc legenerálva, specifikáció, UML ottvan

--- a/src/tgcommander/resources/TGcommanderAboutBox.properties
+++ b/src/tgcommander/resources/TGcommanderAboutBox.properties
@@ -6,4 +6,4 @@ appDescLabel.text=<html>Total Commander szer\u0171 f\u00E1jlkezel\u0151
 
 homepageLabel.text=Weboldal
 homepageLabel1.text=K\u00E9sz\u00EDtette
-appHomepageLabel1.text=B\u00E1n D\u00E9nes, B\u00EDr\u00F3 T\u00EDme, K\u00E1d\u00E1r Istv\u00E1n
+appHomepageLabel1.text=B\u00E1n D\u00E9nes, B\u00EDr\u00F3 T\u00EDmea, K\u00E1d\u00E1r Istv\u00E1n
